# quera-ahs-utils

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: CI.yml  deploy-docs.yml  pkg.yml  python-build.yml
conda.recipe/: meta.yaml
docs/: analysis.html  drive.html  index.html  ir.html  parallelize.html  plotting.html
src/ahs_utils/: __init__.py  drive_utils.py  ir.py  misc.py  parallelize.py  plotting.py
src/old_code/: ahs_utils.py
src/quera_ahs_utils/: analysis.py  drive.py  ir.py  misc.py  parallelize.py  plotting.py  quera_ir.py
src/quera_ahs_utils/quera_ir/: capabilities.py  task_results.py  task_specification.py
test/: test_drive.py  test_ir.py  test_parallelize.py  test_plotting.py
test/aux_files/: parallel_test_1.json  test_1.json  test_1_results_1.json
