[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quera-ahs-utils"
version = "0.4.4"
authors = [
  { name="Phillip Weinberg", email="pweinberg@quera.com" },
  { name="John Long", email="jlong@quera.com" }
]
maintainers = [
  { name="Phillip Weinberg", email="pweinberg@quera.com" },
  { name="John Long", email="jlong@quera.com" }
]
description = "Various tools to interact with Braket Analog Hamiltonian Computing"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "amazon-braket-sdk",
  "networkx",
  "numpy",
  "scipy",
  "matplotlib",
  "pydantic>=2.0.0",
]

[project.urls]
"Homepage" = "https://github.com/QuEraComputing/quera-ahs-utils"
"Bug Tracker" = "https://github.com/QuEraComputing/quera-ahs-utils/issues"

[tool.setuptools.packages.find]
where = ["src"]
