[metadata]
name = quera-ahs-utils
author = QuEra Computing Inc. 
author_email = [jlong@quera.com,pweinberg@quera.com]
description = various functions that can be used to help out with braket python SDK
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/QuEraComputing/quera-ahs-utils

[options]
version = "0.0.1"
packages = find_namespace:
package_dir = 
  = src
install_requires =
  amazon-braket-sdk-python
  networkx
  numpy
  scipy
  matplotlib

[options.packages.find]
where = src